--- a/src/styles/includes/_contact-person.scss
+++ b/src/styles/includes/_contact-person.scss
@@ -7,6 +7,7 @@
 	@include bp-xs {
 		display: flex;
 		flex-flow: column nowrap;
+		margin-top: 9.6rem;
 	}
 
 	&__headline {
